--- a/index.html
+++ b/index.html
@@ -9,21 +9,30 @@
 </head>
 <body>
 
-    <div class="navbar">
-        <h1>Justin Mozley</h1>
+    <div class="navBg">
+        <div class="navbar">
+            <div id="nameBox">
+                <h1 id="name">Justin Mozley</h1>
+            </div>
         
-        <ul>
-            <li>About</li>
-            <li>Portfolio</li>
-            <li>Contact</li>
-        </ul>
+            <div class="navLinkBox">
+                <ul class="navLinks">
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+        </div>
     </div>
 
+    <div class="main">
         <h2 class="aboutMe">About Me</h2>
+
+        <hr>
 
         <img src="assets/images/spaulding-237 copy.jpg" alt="spaulding-237"/>
 
         <p>Hi, I'm Justin, a web developer based in Austin, Texas. I happend to stumble on web development a couple of years ago in my search to better myself. The challenge of creating someting fun, complex, and interactive keeps me coming back for more.</p>
-    
+    </div>
 </body>
 </html>
