Completed html/css rough for index.html

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         
             <div class="navLinkBox">
                 <ul class="navLinks">
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="./index.html">About</a></li>
+                    <li><a href="./portfolio.html">Portfolio</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -29,10 +29,12 @@
         <h2 class="aboutMe">About Me</h2>
 
         <hr>
+        
+        <div id="imgAndP">
+            <img src="assets/images/spaulding-237 copy.jpg" alt="spaulding-237" id="image"/>
 
-        <img src="assets/images/spaulding-237 copy.jpg" alt="spaulding-237"/>
-
-        <p>Hi, I'm Justin, a web developer based in Austin, Texas. I happend to stumble on web development a couple of years ago in my search to better myself. The challenge of creating someting fun, complex, and interactive keeps me coming back for more.</p>
+            <p id="paragraph">Hi, I'm Justin, a web developer based in Austin, Texas. I happend to stumble on web development a couple of years ago in my search to better myself. The challenge of creating someting fun, complex, and interactive keeps me coming back for more. I'm known to sit down to a video game or two and love trying local ciders. I'm a fast learner with drive and an endless supply of ambition for anything code.</p>
+        </div>
     </div>
 </body>
 </html>
