Completed html/css rough for contact.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="navBg">
         <div class="navbar">
             <div id="nameBox">
-                <h1 id="name">Justin Mozley</h1>
+                <h1 id="fullName">Justin Mozley</h1>
             </div>
         
             <div class="navLinkBox">
