Completion of portfolio.html and adjustments made to all html docs. Fixed footer added to all html pages

--- a/index.html
+++ b/index.html
@@ -36,5 +36,7 @@
             <p id="paragraph">Hi, I'm Justin, a web developer based in Austin, Texas. I happend to stumble on web development a couple of years ago in my search to better myself. The challenge of creating someting fun, complex, and interactive keeps me coming back for more. I'm known to sit down to a video game or two and love trying local ciders. I'm a fast learner with drive and an endless supply of ambition for anything code.</p>
         </div>
     </div>
+
+    <div class="footer"></div>
 </body>
 </html>
