--- a/contact.html
+++ b/contact.html
@@ -47,6 +47,8 @@
                 <input id="submit" type="submit" value="Submit">
             </form>
         </div>
-    </div>      
+    </div>
+    
+    <div class="footer"></div>
 </body>
 </html>
