--- a/portfolio.html
+++ b/portfolio.html
@@ -30,14 +30,18 @@
 
         <hr>
         
-        <div class="linkBlock">
-            <a href="#"><img src="./assets/images/placeimg.jpg" alt="placeholder" class="pLink"></a>
-            <a href="#"><img src="./assets/images/placeimg.jpg" alt="placeholder" class="pLink"></a>
-            <a href="#"><img src="./assets/images/placeimg.jpg" alt="placeholder" class="pLink"></a>
-            <a href="#"><img src="./assets/images/placeimg.jpg" alt="placeholder" class="pLink"></a>
-            <a href="#"><img src="./assets/images/placeimg.jpg" alt="placeholder" class="pLink"></a>
-            <a href="#"><img src="./assets/images/placeimg.jpg" alt="placeholder" class="pLink"></a>
+        <div class="flex-container">
+            <a href="#"><img src="./assets/images/placeimg.jpg" alt="placeholder" class="pLink1"></a>
+            <a href="#"><img src="./assets/images/placeimg2.jpg" alt="placeholder" class="pLink2"></a>
+            <a href="#"><img src="./assets/images/placeimg3.jpg" alt="placeholder" class="pLink2"></a>
+            <a href="#"><img src="./assets/images/placeimg4.jpg" alt="placeholder" class="pLink3"></a>
+            <a href="#"><img src="./assets/images/placeimg4.jpg" alt="placeholder" class="pLink1"></a>
+            <a href="#"><img src="./assets/images/placeimg3.jpg" alt="placeholder" class="pLink2"></a>
+            <a href="#"><img src="./assets/images/placeimg2.jpg" alt="placeholder" class="pLink2"></a>
+            <a href="#"><img src="./assets/images/placeimg.jpg" alt="placeholder" class="pLink3"></a>
         </div>
+
+        <div class="footer"></div>
 
     </div>      
 </body>
